--- a/package.json
+++ b/package.json
@@ -27,13 +27,20 @@
     "live-server": "^1.2.2",
     "postcss": "^8.4.31",
     "postcss-cli": "^10.1.0",
+    "postcss-import": "^16.1.1",
     "postcss-preset-env": "^9.2.0",
     "prettier": "^3.0.3",
     "style-loader": "^3.3.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
   },
-  "keywords": ["website", "frontend", "html", "css", "javascript"],
+  "keywords": [
+    "website",
+    "frontend",
+    "html",
+    "css",
+    "javascript"
+  ],
   "author": "",
   "license": "MIT"
 }
