refactor: разбить index.html на модульные компоненты и исправить мобильное меню
- Разбит index.html на 19 компонентов в src/html/partials/
- Создан шаблон index.template.html с @include директивами
- Добавлены скрипты split-html.js и build-html.js для работы с компонентами
- Создан webpack.config.js для корректной сборки JavaScript
- Исправлено мобильное меню: бургер-кнопка видна, меню скрыто по умолчанию
- Обновлен package.json: добавлены build:html, watch:html, split:html
- Все компоненты соответствуют правилам .cursorrules (< 50 KB)

--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
   "scripts": {
     "start": "live-server . --port=3000 --ignore=node_modules,src,.git",
     "dev": "live-server . --port=3000 --watch=. --ignore=node_modules,src,.git",
-    "build": "npm run build:css && npm run build:js",
+    "build": "npm run build:html && npm run build:css && npm run build:js",
+    "build:html": "node scripts/build-html.js",
     "build:css": "postcss src/css/main.css -o styles.css",
     "build:js": "webpack --mode=production",
-    "watch": "npm run watch:css & npm run watch:js",
+    "watch": "npm run watch:html & npm run watch:css & npm run watch:js",
+    "watch:html": "nodemon --watch src/html scripts/build-html.js",
     "watch:css": "postcss src/css/main.css -o styles.css --watch",
     "watch:js": "webpack --mode=development --watch",
+    "split:html": "node scripts/split-html.js",
     "lint": "eslint src/js/**/*.js",
     "format": "prettier --write src/**/*.{html,css,js}",
     "test": "jest"
